--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^11.0.0",
+    "argon2": "^0.44.0",
     "bullmq": "^5.66.1",
     "cache-manager-ioredis-yet": "^2.1.2",
     "class-transformer": "^0.5.1",
